--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,15 @@
 FROM balenalib/raspberrypi3:bullseye
 
 RUN apt-get -y update && \
-    apt-get -y install \
+    apt-get -y install --no-install-recommends \
         python3 \
         python3-dev \
-        python3-pip
+        python3-pip && \
+    apt-get clean
+
+ARG USER
+ENV USER=$USER
+
+RUN useradd -ms "/bin/bash" $USER
+USER $USER
+WORKDIR /home/$USER
