--- a/install-devtools.yml
+++ b/install-devtools.yml
@@ -1,10 +1,13 @@
-- hosts: 127.0.0.1
+- hosts: all
+  become: yes
   tasks:
     - name: Install development dependencies
       ansible.builtin.apt:
+        update_cache: yes
         name:
           - neovim
           - tmux
           - ripgrep
           - zsh
           - tree
+        state: present
