--- a/install-devtools.yml
+++ b/install-devtools.yml
@@ -1,4 +1,7 @@
 - hosts: 127.0.0.1
+  vars:
+    nvim_cfg_url: "https://raw.githubusercontent.com/nicomiguelino/dotfiles/main/init.vim"
+    nvim_cfg_dir: "{{ lookup('env', 'HOME') }}/.config/nvim"
   become: yes
   tasks:
     - name: Install development dependencies
@@ -11,3 +14,11 @@
           - zsh
           - tree
         state: present
+    - name: Configure Neovim
+      ansible.builtin.shell: |
+        mkdir -p {{nvim_cfg_dir}} && cd $_
+        curl -sL {{nvim_cfg_url}} > init.vim
+
+        sh -c 'curl -sfLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
+          https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+        nvim --headless +PlugInstall +qall
