--- a/install-devtools.yml
+++ b/install-devtools.yml
@@ -19,6 +19,7 @@
         mkdir -p {{nvim_cfg_dir}} && cd $_
         curl -sL {{nvim_cfg_url}} > init.vim
 
-        sh -c 'curl -sfLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
-          https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
-        nvim --headless +PlugInstall +qall
+        # TODO: Uncomment when ready.
+        # sh -c 'curl -sfLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
+        #   https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+        # nvim --headless +PlugInstall +qall
