--- a/install-devtools.yml
+++ b/install-devtools.yml
@@ -16,11 +16,11 @@
         state: present
     - name: Configure Neovim
       ansible.builtin.shell: |
-        echo "ncim_cfg_dir: {{  }}"
+        echo "nvim_cfg_dir: {{ nvim_cfg_dir }}"
         mkdir -p {{nvim_cfg_dir}} && cd $_
         curl -sL {{nvim_cfg_url}} > init.vim
-
-        # TODO: Uncomment when ready.
-        # sh -c 'curl -sfLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
-        #   https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
-        # nvim --headless +PlugInstall +qall
+        curl -sfLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
+          https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+        nvim --headless +PlugInstall +qall
+      args:
+        executable: /bin/bash
