--- a/install-devtools.yml
+++ b/install-devtools.yml
@@ -2,6 +2,7 @@
   vars:
     nvim_cfg_url: "https://raw.githubusercontent.com/nicomiguelino/dotfiles/main/init.vim"
     nvim_cfg_dir: "{{ lookup('env', 'HOME') }}/.config/nvim"
+    vim_plug_url: "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
     vim_plug_default_dir: "{{ lookup('env', 'HOME') }}/.local/share"
   tasks:
     - name: Install development dependencies
@@ -20,10 +21,8 @@
       register: aptout
     - name: Configure Neovim
       ansible.builtin.shell: |
-        mkdir -p {{ nvim_cfg_dir }} && cd $_
-        curl -sL {{ nvim_cfg_url }} > init.vim
-        curl -sfLo {{ vim_plug_default_dir }}/nvim/site/autoload/plug.vim --create-dirs \
-          https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
+        curl -sfLo {{ nvim_cfg_dir }}/init.vim --create-dirs {{ nvim_cfg_url }}
+        curl -sfLo {{ vim_plug_default_dir }}/nvim/site/autoload/plug.vim --create-dirs {{ vim_plug_url }}
         nvim --headless +PlugInstall +qall
       args:
         executable: /bin/bash
