--- a/install-devtools.yml
+++ b/install-devtools.yml
@@ -96,6 +96,7 @@
           # Set default prefix back to C-b.
           set -g prefix2 C-b
           bind C-b send-prefix -2
+          setw -g mode-keys vi
 
           # Enable the Powerline look.
           tmux_conf_theme_left_separator_main='\uE0B0'
