--- a/install-devtools.yml
+++ b/install-devtools.yml
@@ -21,6 +21,7 @@
           - tmux
           - tree
           - zsh
+          - wget
         state: present
       register: aptout
     - name: Configure Git
@@ -37,6 +38,10 @@
         nvim --headless +PlugInstall +qall
       args:
         executable: /bin/bash
+    - name: Install Docker Buildx
+      ansible.builtin.shell: |
+        mkdir -p ~/.docker/cli-plugins
+        wget -O ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/v0.10.3/buildx-v0.10.3.linux-arm64
     - name: Install Oh My Zsh
       ansible.builtin.shell: |
         sh -c "$(curl -fsSL {{ oh_my_zsh_url }})" "" --unattended
@@ -67,6 +72,7 @@
 
           # Hard code this to latest for now.
           export DOCKER_TAG="latest"
+          export DOCKER_TAG="$(git rev-parse --short HEAD)"
 
           # Detect Raspberry Pi version
           if [ -f /proc/device-tree/model ]; then
