--- a/install-devtools.yml
+++ b/install-devtools.yml
@@ -8,6 +8,7 @@
     git_username: "nicomiguelino"
     git_email: "nicomiguelino2014@gmail.com"
     git_editor: "nvim"
+    buildx_version: "v0.10.3"
   tasks:
     - name: Install development dependencies
       become: yes
@@ -41,7 +42,12 @@
     - name: Install Docker Buildx
       ansible.builtin.shell: |
         mkdir -p ~/.docker/cli-plugins
-        wget -O ~/.docker/cli-plugins/docker-buildx https://github.com/docker/buildx/releases/download/v0.10.3/buildx-v0.10.3.linux-arm64
+
+        prefix="https://github.com/docker/buildx/releases/download"
+        binary="buildx-{{ buildx_version }}.linux-arm64"
+        buildx_dl_url="$prefix/{{ buildx_version }}/$binary"
+
+        wget -O ~/.docker/cli-plugins/docker-buildx $buildx_dl_url
     - name: Install Oh My Zsh
       ansible.builtin.shell: |
         sh -c "$(curl -fsSL {{ oh_my_zsh_url }})" "" --unattended
