--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,6 @@ services:
     command: bash
     stdin_open: true
     tty: true
+    volumes:
+      - ./install-devtools.sh:/home/$USER/install-devtools.sh
+      - ./install-devtools.yml:/home/$USER/install-devtools.yml
