--- a/install-devtools.yml
+++ b/install-devtools.yml
@@ -45,6 +45,7 @@
       args:
         executable: /bin/bash
     - name: Make sure distro package of Docker is absent
+      become: yes
       ansible.builtin.apt:
         name:
           - docker
@@ -55,14 +56,17 @@
           - docker-compose
         state: absent
     - name: Add docker apt key
+      become: yes
       ansible.builtin.apt_key:
         url: https://download.docker.com/linux/raspbian/gpg
         state: present
     - name: Get raspbian name
+      become: yes
       ansible.builtin.command: lsb_release -cs
       register: raspbian_name
       changed_when: false
     - name: Add Docker repo
+      become: yes
       ansible.builtin.lineinfile:
         path: /etc/apt/sources.list.d/docker.list
         create: true
@@ -72,6 +76,7 @@
         group: root
         mode: 0644
     - name: Install Docker
+      become: yes
       ansible.builtin.apt:
         name:
           - docker-ce:armhf
@@ -80,6 +85,7 @@
         update_cache: true
         install_recommends: false
     - name: Add user to docker group
+      become: yes
       ansible.builtin.user:
         name: "{{ lookup('env', 'USER') }}"
         group: "{{ lookup('env', 'USER') }}"
